Fixup file types

--- a/dos33.html
+++ b/dos33.html
@@ -4963,7 +4963,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     014             MSC ON                                          ; Switch ASCII to Apple Text (high bit set)
 33A7:D4 C9 C1 C2    015 <a class="d" name="FTTAB" >FTTAB       </a>ASC "TIAB"      ; FILE TYPE CONVERSTION TABLE"  ; <a class='dumb'>File Types</a> You couldn't use file types that make <i>visual</i> hex editing easier??
                                                                                     ;     Type             Code  Dumb       Smart 
-                                                                                    ;     Applesoft Basic  A     03 Ctrl-C  01 Ctrl-A
+                                                                                    ;     Applesoft Basic  A     02 Ctrl-B  01 Ctrl-A
                                                                                     ;     Binary           B     04 Ctrl-D  02 Ctrl-B
                                                                                     ;                      c                03
                                                                                     ;                      d                04
