Fix header for RELOCTR

--- a/dos33.html
+++ b/dos33.html
@@ -797,7 +797,7 @@ With that "legalese" out of the way ... enjoy the read!
                     036             INCLUDE <a class="_c44 file" href="#DOSPTCH">DOSPTCH</a>,,1                              ; $3FC8 .. $3FFF, T0S9
 </pre>
 
-<div class='sticky'><hr><hr class='join'>=== <a class="file" name="RELOCTR">RELOCTR</a> - Relocate DOS to high (48K) memory, Page <a class="page" name="page110">110</a>, <a class='ts' href='#T0SA'>T0SA</a>, $<span class='n'>1B00</span> .. $<span class='n'>1CFF</span> ===<hr class='join'><hr></div>
+<div class='sticky'><hr><hr class='join'>=== <a class="file" name="RELOCTR">RELOCTR</a> - Relocate DOS to high (48K) memory, Page <a class="page" name="page110">110</a>, <a class='ts' href='#T0SA'>T0SA</a>-<a class='ts' href='#T0SB'>T0SB</a>, $<span class='n'>1B00</span> .. $<span class='n'>1C80</span> (n/a) ===<hr class='join'><hr></div>
 <pre>
                     001             PAGE                                            ; === Page <a class='page' name='page110'>110</a> ===
                     002 *****************************************************
