--- a/dos33.html
+++ b/dos33.html
@@ -837,7 +837,7 @@ With that "legalese" out of the way ... enjoy the read!
                     00072 036 *                               *
                     00073 037 *            BY                 *
                     00074 038 *        GUIL  BANKS            *
-                    00075 039 *         1983                  *
+                    00075 039 *         1983                  *                           ; Note: Fixed EOL formatting in PDF
                     00076 040 *                               *
                     00077 041 *********************************
                     00078 042 ;
@@ -2248,17 +2248,17 @@ With that "legalese" out of the way ... enjoy the read!
                     277 <a class='f' name='CLALL'    >CLALL       </a>EQU *
                     278             JSR TSINIT      ; GO INIT FILE SEARCH
                     279             BNE CL1 
-                    280 CL0         EQU *
+                    280 <a class='f' name='CL0'      >CL0         </a>EQU *
                     281             JSR TXNXT       ; NEXT ENTRY
                     282             BEQ CL2         ; BR IF NO MORE
-                    283 CL1         EQU *
+                    283 <a class='f' name='CL1'      >CL1         </a>EQU *
                     284             JSR TXTEXC
                     285             BEQ CL0
                     286             JSR TSTOPEN     ; GO TEST OPEN
                     287             BEQ CL0         ; BR NOT OPEN
 232A:20 FC A2       288             JSR CLOSE       ; GO CLOSE
 232D:4C 16 23       289             JMP CLALL       ; START OVER
-2330:60             290 CL2         RTS             ; DONE
+2330:60             290 <a class='f' name='CL2'      >CL2         </a>RTS             ; DONE
 </pre>
 
 <div class='sticky'><hr><hr class='join'>=== <a class="file" name="XLODSAV">XLODSAV</a> - Execute Load / Save, Page <a class="page" name="page140">140</a>, <a class='ts' href='#T1S2'>T1S2</a> - <a class='ts' href='#T1S4'>T1S4</a>, $<span class='n'>A331</span> .. $<span class='n'>A50F</span> ===<hr class='join'><hr></div>
@@ -2273,7 +2273,7 @@ With that "legalese" out of the way ... enjoy the read!
 2336:C9 09          008             CMP #ADR+L
 2338:F0 03          009             BEQ EBSV1
 233A:4C 00 20       010             JMP CNF         ; THEN ERROR
-                    011 EBSV1       EQU *
+                    011 <a class='f' name='EBSV1'    >EBSV1       </a>EQU *
 233D:A9 04          012             LDA #<span class='n'>4</span>          ; SET BINARY FILE               ; <a class='magic' name='_233E'>magic number</a> FILE_TYPE_BINARY
                     013             JSR SV1         ; GO OPEN &amp; TEST
                     014             LDA CA+1        ; OUTPUT ADR OF BLOCK
@@ -2290,13 +2290,13 @@ With that "legalese" out of the way ... enjoy the read!
                     025 ;
                     026 <a class='f' name='EBLD'     >EBLD        </a>EQU *                                           ; <a class='v' href='#CMDETB'>CMDETB</a> [19]
 235D:               027             JSR EOPN1       ;(CHANGED 11/1/78 FOR TYPE MISMATCH)
-                    028 EBLD2       EQU *                                           ; *sigh* If only the local labels were in alphabetical order ...
+                    028 <a class='f' name='EBLD2'    >EBLD2       </a>EQU *                                           ; *sigh* If only the local labels were in alphabetical order ...
                     029             LDA #$<span class='n'>7F</span>                                        ; <a class='magic' name='_'>magic number</a> ~FILE_LOCK
                     030             AND CCBFUC
                     031             CMP #<span class='n'>4</span>                                          ; <a class='magic' name='_'>magic number</a> FILE_TYPE_BINARY
                     032             BEQ EBLD3
                     033             JMP ETYP        ;TYPE MISMATCH ERROR MESSAGE
-                    034 EBLD3       EQU *
+                    034 <a class='f' name='EBLD3'    >EBLD3       </a>EQU *
                     035             LDA #4          ; SET BINARY FILE               ; <a class='magic' name='_'>magic number</a> /sarcasm if only we had <span class='code'>FILE_TYPE_BINARY EQU 4</span>
                     036             JSR SV1         ; GO OPEN &amp; TEST
                     037             JSR LD2         ; GO GET ADR
@@ -2306,7 +2306,7 @@ With that "legalese" out of the way ... enjoy the read!
                     041             BNE EBLD1
                     042             STX CA          ; THEN USE ADR FROM FILE
                     043             STY CA+1
-                    044 EBLD1       EQU *
+                    044 <a class='f' name='EBLD1'    >EBLD1       </a>EQU *
                     045             JSR LD2         ; GET LENGTH
                     046             LDX CA          ; GET GIVEN ADR
                     047             LDY CA+1
@@ -2324,141 +2324,141 @@ With that "legalese" out of the way ... enjoy the read!
                                                                                     ;              STA GOBRUN+2
                                                                                     ; GOBRUN       JSR $0000       ; NOTE: Self-Modifying code
                                                                                     ;              RTS
-                    055 
-                    056 
-                    057 
-                    058 
-                    059 
-                    060 
-                    061 
-                    062 
-                    063 
-                    064 
-                    065 
-                    066 
-                    067 
-                    068 
-                    069 
-                    070 
-                    071 
-                    072 
-                    073 
-                    074 
-                    075 
-                    076 
-                    077 
-                    078 
-                    079 
-                    080 
-                    081 
-                    082 
-                    083 
-                    084 
-                    085 
-                    086 
-                    087 
-                    088 
-                    089 
-                    090 
-                    091 
-                    092 
-                    093 
-                    094 
-                    095 
-                    096 
-                    097 
-                    098 
-                    099 
-                    100 
-                    101 
-                    102 
-                    103 
-                    104 
-                    105 
-                    106 
-                    107 
-                    108 
-                    109 
-                    110 
-                    111 
-                    112 
-                    113 
-                    114 
-                    115 
-                    116 
-                    117 
-                    118 
-                    119 
-                    120 
-                    121 
-                    122 
-                    123 
-                    124 
-                    125 
-                    126 
-                    127 
-                    128 
-                    129 
-                    130 
-                    131 
-                    132 
-                    133 
-                    134 
-                    135 
-                    136 
-                    137 
-                    138 
-                    139 
-                    140 
-                    141 
-                    142 
-                    143 
-                    144 
-                    145 
-                    146 
-                    147 
-                    148 
-                    149 
-                    150 
-                    151 
-                    152 
-                    153 
-                    154 
-                    155 
-                    156 
-                    157 
-                    158 
-                    159 
-                    160 
-                    161 
-                    162 
-                    163 
-                    164 
-                    165 
-                    166 
-                    167 
-                    168 
-                    169 
-                    170 
-                    171 
-                    172 
-                    173 
-                    174 
-                    175 
-                    176 
-                    177 
-                    178 
-                    179 
-                    180 
-                    181 
-                    182 
-                    183 
-                    184 
-                    185 
-                    186 
-                    187 
-                    188 
-                    189 
+                    055 ;
+                    056 ; ESAVE - EXECUTE SAVE REQUEST
+                    057 ;
+                    058 <a class='f' name='ESAVE'    >ESAVE       </a>EQU *
+                    059             LDA ASIBSW      ; IF IB THEN
+                    060             BEQ EIBSV       ; GO TO IB SAVE
+                    061             LDA ASRNX       ; CAN NOT DO AS SAVE WHEN RUN-ONLY PROG.
+                    062             BPL EASAV       ; BRANCH IF OK TO SAVE, OTHERWISE
+                    063             JMP MFERR       ; PRINT "PROGRAM TOO LARGE", THAT OUGHT TO GET 'EM.
+                    064 <a class='f' name='EASAV'    >EASAV       </a>LDA #<span class='n'>2</span>          ; GET APPLESOFT PGM             ; <a class='magic' name='_'>magic number</a> <span class='code'>FILE_TYPE_APPLESOFT EQU 2</span>
+                    065             JSR SV1         ; GO OPEN AND TEST
+                    066 ;
+                    067             SEC             ; BLOCK LENGTH
+                    068             LDA ASEOP       ; =EOP-SOP
+                    069             SBC ASSOP
+                    070             TAY
+                    071             LDA ASEOP+1                                     ; single letter difference asEop
+                    072             SBC ASSOP+1                                     ; is never a good idea:    asSop
+                    073             JSR SV2         ; GO OUTPUT LENGTH
+                    074 ;
+                    075             LDA ASSOP+1     ; BLOCK ADR
+                    076             LDY ASSOP       ; =SOP
+                    077             JMP SV3         ; GO OUTPUT BLOCK
+                    078 ;
+                    079 <a class='f' name='EIBSV'    >EIBSV       </a>EQU *
+                    080             LDA #<span class='n'>1</span>          ; SET IB PGM                    ; PGM = Program, <a class='magic' name='_'>magic number</a> <span class='code'>FILE_TYPE_INTEGER_BASIC EQU 1</span>
+                    081             JSR SV1         ; GO OPEN AND TEST
+                    082 ;
+                    083             SEC             ; BLOCK LENGTH
+                    084             LDA IBHMEM      ; =HIMEM-SOP
+                    085             SBC IBSOP
+                    086             TAY
+                    087             LDA IBHMEM+<span class='n'>1</span>
+                    088             SBC IBSOP+<span class='n'>1</span>
+                    089             JSR SV2         ; GO OUTPUT LENGTH
+                    090 ;
+                    091             LDA IBSOP+<span class='n'>1</span>     ; BLOCK ADR
+                    092             LDY IBSOP       ; =SOP
+                    093             JMP SV3         ; GO OUTPUT BLOCK
+                    094 ;
+                    095 <a class='f' name='SV1'      >SV1         </a>EQU *
+                    096 <a class='f' name='SV1A'     >SV1A        </a>EQU *
+                    097             STA CCBFUC      ; SET PGM TYPE
+                    098             PHA             ; SAVE PGM TYPE
+                    099             JSR EOPN1       ; GO OPEN FILE  (CHGED 11/1/78)
+                    100             PLA             ; GET SAVE TYPE
+                    101             JMP TSTFUC      ; GO CHECK
+                    102 ;
+                    103 <a class='f' name='SV2'      >SV2         </a>EQU *
+                    104             STY CCBBLN      ; SET BLOCK LENGTH              ; === <a class='dumb' name='HNTDAFS'>HNTDAFS #5</a> ===
+                    105             STY CCBDAT      ; AND DATA BYTE                 ; You <b>never</b> store file meta-data
+                    106             STA CCBBLN+<span class='n'>1</span>                                    ;    File Length
+                    107             LDA #CRQWR      ; INDICATE WRITE                ; <i>in</i> the file itself!
+                    108             STA CCBREQ
+                    109             LDA #CRNBT      ; NEXT BYTE
+                    110             STA CCBRQM
+                    111             JSR DOSGO       ; GO WRITE
+                    112             LDA CCBBLN+<span class='n'>1</span>    ; OTHER BYTE TOO
+                    113             STA CCBDAT
+<hr>                    114             JMP DOSGO
+                    115 ;
+                    116 <a class='f' name='SV3'      >SV3         </a>STY CCBBBA      ; SET BLOCK ADR
+                    117             STA CCBBBA+<span class='n'>1</span>
+                    118             LDA #CRMNBL     ; INDICATE BLOCK I/O
+                    119             JMP VPATCH      ;VERIFY AFTER SAVE
+                    120 <a class='f' name='GODOS'    >GODOS       </a>JSR DOSGO       ; GO DO IT
+                    121             JMP ECLOSE      ; CLOSE FILE
+                    122             PAGE
+                    123 <a class='f' name='NBPER'    >NBPER       </a>NBPER       JMP ERNU1                           ; Not Basic Program Error called from ELD1
+                    124 ;
+                    125 ; ELOAD - EXECUTE LOAD REQUEST
+                    126 ;
+                    127 <a class='f' name='ELOAD'    >ELOAD       </a>EQU *
+                    128             JSR CLALL
+                    129 <a class='f' name='ELOAD0'   >ELOAD0      </a>JSR EOPN1
+                    130 ;
+                    131 <a class='f' name='ELD1'     >ELD1        </a>EQU *                                           ; *sigh* Pick a bloody <i>consistent</i> naming schema
+                    132             LDA #$<span class='n'>23</span>        ; STRIP UNRELATED STUFF         ; <a class='magic' name='_'>magic number</a>
+                    133             AND CCBFUC      ; OUT OF FUC
+                    134             BEQ NBPER       ; BR IF ERROR
+                    135 ; ISOLATE IB &amp; AS
+                    136 <a class='f' name='ELD2'     >ELD2        </a>EQU *
+                    137             STA CCBFUC      ; SAVE IB/AS ONLY
+                    138             LDA ASISBSW     ; IF IB THEN
+                    139             BEQ EIBL        ; GO TO IB LOAD
+                    140             LDA #2                                          ; <a class='magic' name='_'>magic number</a> <span class='code'>FILE_TYPE_APPLESOFT EQU 2</span>
+                    141             JSR LD1         ; GO OPEN AND TEST
+                    142 ;
+                    143             JSR LD2         ; GO GET BLOCK LENGTH           ; <a class='mem' name='_'>wastes</a> 3 bytes, LD1 should fall into LD2
+                    144 ;                                                           ; While EBLD2 (ExecBload2) calls LD2 by itself, LD1 is always followed by LD2
+                    145             CLC
+                    146             ADC ASSOP       ; ADD BLOCK LENGTH TO SOP
+                    147 ;
+                    148             CMP ASHM1+1     ; IF BL+SOP &gt;= HMEM             ; If Block.Length + StartOfProgram &gt;= High Memory
+                    149             BCS MFULL       ; THEN WON'T FIT                ; Memory Full
+                    150 ;
+                    151 <a class='f' name='EASL1'    >EASL1       </a>EQU *
+                    152             STA ASEOP+1     ; SET NEW EOP ADR
+                    153             STA ASEOP2+1
+                    154             STX ASEOP
+                    155             STX ASEOP2
+                    156             LDX ASSOP       ; GET ADR WHERE TO LOAD
+                    157             LDY ASSOP+1
+                    158             JSR LD3         ; GO LOAD
+                    159             JSR MVCSW       ;RESTORE I/O                    ; Why??? Did something change CIN/COUT ???
+                    160             JMP (ASEQ)      ;RELOC FOR THIS VERSION OF APPLSOFT
+                    161 ;
+                    162 <a class='f' name='EIBL'     >EIBL        </a>EQU *
+                    163             LDA #1          ; SET IB PGM                    ; Yup, almost 99% the same as ELD2
+                    164             JSR LD1         ; GO OPEN AND TEST
+                    165 ;
+                    166             JSR LD2         ; GO GET BLOCK LENGTH           ; <a class='mem' name='_'>wastes</a> 3  bytes, see Line #141
+                    167 ;
+                    168             SEC             ; HMEM - BLOCK LENGTH
+                    169             LDA IBHMEM      ; IS NEW SOP
+                    170             SBC SVBL
+                    171             TAX
+                    172             LDA IBHMEM+1
+                    173             SBC SVBL+1
+<hr>                    174             BCC MFULL
+                    175             TAY
+                    176 ;
+                    177             CPY IBLMEM+1    ; IF NEW SOP &lt;= LMEM
+                    178             BCC MFULL
+                    179             BEQ MFULL
+                    180             STY IBSOP+1     ; SET NEW SOP
+                    181             STX IBSOP
+                    182 <a class='f' name='LD3'      >LD3         </a>EQU *
+                    183             STX CCBBBA      ; SET BLOCK ADDR                ; A single underscore '_' would go a LONG way towards readability
+                    184             STY CCBBBA+1                                    ; CCB_BBA
+                    185             JMP GODOS
+                    186 ;
+                    187 <a class='f' name='LD2'      >LD2         </a>EQU *                                           ; By putting this before LD1 this forces 6 byes to be wasted, see Line #143
+                    188             LDA SVBLA       ; MOVE ADR OF WHERE
+                    189             STA CCBBA       ;
                     190 
                     191 
                     192 
