--- a/dos33.html
+++ b/dos33.html
@@ -5688,12 +5688,12 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     420 ;
                     421             DSECT
                     422 FILDIR      EQU *                                               ;T11S0 <a class='dumb' name='HNTDAFS6'>HNTDAFS #6</a>
-                    423 FDUCDE      DS 1            ; FILE USE CODE                     ; [00] <a class='mem' name='_'>wastes</a> 1 byte -- never used!
+                    423 FDUCDE      DS 1            ; FILE USE CODE                     ; [00] <a class='mem' name='_3800'>wastes</a> 1 byte -- never used!
                     424 FDLTRK      DS 1            ; LINK TO NEXT DIR TRACK            ; [01] $11
                     425 FDLSEC      DS 1            ; LINK TO NEXT DIR SECTOR           ; [02] $0E
-                    426 FDNSA       DS 1            ; NO SECTORS ALLOCATED              ; [03] <a class='mem' name='_'>wastes</a> 1 byte -- never used!
-                    427 FDLSDL      DS 1            ; LAST SECTOR DATA LENGTH           ; [04] <a class='mem' name='_'>wastes</a> 1 byte -- never used!
-                    428 FDFRS       DS 2            ; 1ST RELATIVE SECTOR IN THIS DIR   ; [05] read by and RFDNL1 and RDFDC in FMTRWIO
+                    426 FDNSA       DS 1            ; NO SECTORS ALLOCATED              ; [03] <a class='mem' name='_3803'>wastes</a> 1 byte -- never used!
+                    427 FDLSDL      DS 1            ; LAST SECTOR DATA LENGTH           ; [04] <a class='mem' name='_3804'>wastes</a> 1 byte -- never used!
+                    428 FDFRS       DS 2            ; 1ST RELATIVE SECTOR IN THIS DIR   ; [05] read by <a class='x' href='#RFDNL1'>RFDNL1</a> and <a class='x' href='#RDFDC'>RDFDC</a> in FMTRWIO
 <hr>                    429 FDSPAR      DS  5           ; SPARES                            ; [07] How did this ever work??? Should be 4!
                     430 ;
                     431 FDENT       DS  1           ; START OF FILE ENTRIES (122)       ; [0C] Should be @ offset $B !!!
