Fix color description

--- a/dos33.html
+++ b/dos33.html
@@ -273,7 +273,7 @@ a.link { /* we link TO somthing -- source */
 }
 a.mem { /* *wastes* X bytes of memory */
     color           : #000;
-    background-color: #FDE; /* purple */
+    background-color: #FDE; /* pink */
     text-decoration: none; /* remove underlink from data link */
 }
 .n { /* Dec, Hex, Number, Memory Address */
